<resources>
    <string name="app_name">Salvavidapp</string>
    <string name="message">Message</string>
    <string name="destination">Destination</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="sms">SMS</string>
    <string name="send">Send</string>
    <string name="contact_name">Contact name</string>
    <string name="or_phone_number">or Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="to">fry93fry@gmail.com</string>
    <string name="enter_a_e_mail">Enter a e-mail</string>
    <string name="alarm_name">Alarm name</string>
    <string name="name">Name</string>
    <string name="store">Store</string>
    <string name="enter_an_e_mail">Enter an e-mail</string>
    <string name="crear">Crear</string>
    <string name="borrar">Borrar</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="test_now">Test now</string>
    <string name="test">Test</string>
    <string name="message_to_send">Message to send</string>
    <string name="phone_number">Phone number</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="start">START</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="start_stop">START/STOP</string>
    <string name="send2">Send</string>

</resources>
