<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fry.salvavidapp.PantallaPrincipal">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="1dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginBottom="23dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:lines="4"
        android:inputType="textMultiLine"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:text="@string/destination"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="1dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="154dp"
        android:layout_height="43dp"
        android:layout_marginTop="125dp"
        android:digits="0123456789+"
        android:ems="10"
        android:hint="@string/or_phone_number"
        android:inputType="phone"
        android:selectAllOnFocus="false"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />



    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="1dp"
        android:text="@string/e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="1dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/send"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <AutoCompleteTextView
        android:id="@+id/editText3"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/contact_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.502" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_a_e_mail"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
